--- a/front/PostEmp/PostEmp.html
+++ b/front/PostEmp/PostEmp.html
@@ -44,7 +44,7 @@
         </div>
         <div
           class="menu-item active"
-          onclick="window.location.href='../VerEmprestimo/Emprestimos.html'"
+          onclick="window.location.href='../PostEmp/PostEmp.html'"
         >
           <i class="fas fa-plus-circle"></i> <span>Novo Empréstimo</span>
         </div>
