--- a/front/PostEmp/PostEmp.html
+++ b/front/PostEmp/PostEmp.html
@@ -127,9 +127,9 @@
 
             <div class="form-group">
               <label for="data-devolucao"
-                ><i class="fas fa-arrow-down"></i> Data de Devolução *</label
+                ><i class="fas fa-arrow-down"></i> Data de Devolução </label
               >
-              <input type="datetime-local" id="data-devolucao" required />
+              <input type="datetime-local" id="data-devolucao"/>
             </div>
           </div>
 
