--- a/front/Cadastro/cadastro.html
+++ b/front/Cadastro/cadastro.html
@@ -3,50 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Cadastro</title>
-    <link rel="stylesheet" href="CSS/CssCadastro.css" />
-    <script src="JS/JSCadastro.js"></script>
+    <title>FaceShield - Cadastro</title>
+    <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
+    <link rel="stylesheet" href="./CSS/CssCadastro.css" />
+    <script src="./JS/JSCadastro.js" defer></script>
   </head>
   <body>
-    <div class="background">
-      <div class="background-image"></div>
-      <div class="bsackground-overlay"></div>
-    </div>
+    <div class="decorative-border"></div>
+
     <div class="botaoVoltar">
       <a class="buttonVoltar" href="../index.html">Voltar</a>
     </div>
 
     <main class="main-content">
-      <div class="logo-container">
-        <img
-          src="../Recursos/LogoFaceShield.png"
-          alt="Logo da Empresa"
-          class="logo"
-        />
-      </div>
-
       <div class="form-container">
         <form id="cadastroForm" class="form-grid">
           <div class="input-group floating-label">
-            <select
-              id="tipoUsuario"
-              name="tipoUsuario"
-              required
-              style="
-                background: rgba(30, 41, 59, 0.3);
-                color: white;
-                padding: 1.2rem;
-                border-radius: 8px;
-                border: 1px solid rgba(0, 224, 255, 0.3);
-                font-size: 1.1rem;
-              "
-            >
+            <select id="tipoUsuario" name="tipoUsuario" required>
               <option value="" disabled selected hidden>
                 Selecione o tipo de usuário
               </option>
               <option value="1">Aluno</option>
               <option value="2">Professor</option>
             </select>
+            <label for="tipoUsuario">Tipo de Usuário</label>
+            <div class="input-border"></div>
+            <span class="validation-icon"></span>
+            <div class="error-message"></div>
           </div>
 
           <div class="input-group floating-label">
@@ -54,6 +37,7 @@
             <label for="nome">Nome</label>
             <div class="input-border"></div>
             <span class="validation-icon"></span>
+            <div class="error-message"></div>
           </div>
 
           <div class="input-group floating-label">
@@ -61,6 +45,7 @@
             <label for="sobrenome">Sobrenome</label>
             <div class="input-border"></div>
             <span class="validation-icon"></span>
+            <div class="error-message"></div>
           </div>
 
           <div class="input-group floating-label">
@@ -68,6 +53,7 @@
             <label for="turma">Turma</label>
             <div class="input-border"></div>
             <span class="validation-icon"></span>
+            <div class="error-message"></div>
           </div>
 
           <div class="input-group floating-label" id="username-group">
@@ -75,6 +61,7 @@
             <label for="username">Nome de Usuário</label>
             <div class="input-border"></div>
             <span class="validation-icon"></span>
+            <div class="error-message"></div>
           </div>
 
           <div class="input-group floating-label" id="senha-group">
@@ -82,21 +69,21 @@
             <label for="senha">Senha</label>
             <div class="input-border"></div>
             <span class="validation-icon"></span>
+            <div class="error-message"></div>
           </div>
 
           <!-- Widget de Captura Biométrica -->
-          <div
-            class="face-scan-widget"
-            style="
-              cursor: pointer;
-              text-align: center;
-              padding: 1rem;
-              border: 2px dashed rgba(0, 224, 255, 0.4);
-              border-radius: 8px;
-              color: white;
-            "
-          >
-            <p class="upload-instruction">Clique para captura biométrica</p>
+          <div class="face-recognition-container">
+            <button type="button" class="view-camera-btn">
+              Visualizar Câmera
+            </button>
+
+            <div class="face-scan-widget">
+              <div class="scan-animation-overlay"></div>
+              <div class="scanning-line-effect"></div>
+              <img id="camera-feed" alt="Camera Feed" />
+              <p class="upload-instruction">Clique para captura biométrica</p>
+            </div>
           </div>
 
           <button type="submit" class="botao">Cadastrar</button>
@@ -106,5 +93,9 @@
 
     <!-- Feedback -->
     <div id="feedback" class="feedback"></div>
+
+    <div class="loading-overlay">
+      <div class="loading-spinner"></div>
+    </div>
   </body>
 </html>
