--- a/front/VerEmprestimo/Emprestimos.html
+++ b/front/VerEmprestimo/Emprestimos.html
@@ -126,7 +126,7 @@
             <tbody id="loans-table-body">
               <!-- Dados serão carregados via JavaScript -->
               <tr>
-                <td colspan="7" style="text-align: center; padding: 20px">
+                <td colspan="8" style="text-align: center; padding: 20px">
                   Carregando empréstimos...
                 </td>
               </tr>
@@ -142,6 +142,78 @@
           <span id="page-info">Página 1 de 1</span>
           <button id="next-page">
             Próxima <i class="fas fa-chevron-right"></i>
+          </button>
+        </div>
+      </div>
+    </div>
+
+    <!-- Modal de Detalhes do Empréstimo -->
+    <div id="loan-details-modal" class="modal">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h2>Detalhes do Empréstimo</h2>
+          <span class="close">&times;</span>
+        </div>
+        <div class="modal-body">
+          <div class="details-grid">
+            <div class="detail-item">
+              <label>ID:</label>
+              <span id="modal-id"></span>
+            </div>
+            <div class="detail-item">
+              <label>Usuário:</label>
+              <span id="modal-user"></span>
+            </div>
+            <div class="detail-item">
+              <label>Ferramenta:</label>
+              <span id="modal-tool"></span>
+            </div>
+            <div class="detail-item">
+              <label>Data de Retirada:</label>
+              <span id="modal-withdrawal"></span>
+            </div>
+            <div class="detail-item">
+              <label>Data de Devolução Prevista:</label>
+              <span id="modal-expected-return"></span>
+            </div>
+            <div class="detail-item">
+              <label>Data de Devolução Real:</label>
+              <span id="modal-actual-return"></span>
+            </div>
+            <div class="detail-item">
+              <label>Status:</label>
+              <span id="modal-status"></span>
+            </div>
+            <div class="detail-item full-width">
+              <label>Localização da Ferramenta:</label>
+              <div id="modal-location">
+                <div class="location-detail">
+                  <i class="fas fa-building"></i>
+                  <span id="modal-location-space"></span>
+                </div>
+                <div class="location-detail">
+                  <i class="fas fa-archive"></i>
+                  <span id="modal-location-cabinet"></span>
+                </div>
+                <div class="location-detail">
+                  <i class="fas fa-layer-group"></i>
+                  <span id="modal-location-shelf"></span>
+                </div>
+                <div class="location-detail">
+                  <i class="fas fa-box"></i>
+                  <span id="modal-location-case"></span>
+                </div>
+              </div>
+            </div>
+            <div class="detail-item full-width">
+              <label>Observações:</label>
+              <span id="modal-notes"></span>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button id="modal-return-btn" class="return-btn">
+            <i class="fas fa-check-circle"></i> Registrar Devolução
           </button>
         </div>
       </div>
